Fixed Header
- Make header Text dynamically shrink, if text is too big
- Adjust custom Bootstrap
- Added test to input-area.component.spec.ts

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,9 +1,3 @@
-@media screen and (max-width: 368px) {
-  mat-toolbar {
-    justify-content: flex-end !important;
-  }
-}
-
 mat-toolbar {
   padding-top: calc(env(safe-area-inset-top) + 2.5rem);
   padding-right: env(safe-area-inset-right);
@@ -17,17 +11,15 @@ mat-toolbar-row {
 
 button {
   color: #1C5475;
-  position: absolute;
-  left: 0;
   height: fit-content !important;
 }
 
 span.nav-element {
   color: #1C5475;
-  font-size: clamp(3em, 6vw, 3.5em);
+  font-size: 3em;
 }
 
-span.title {
+div.title {
   color: #000000;
 }
 
