--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,11 +21,11 @@ $standard-background: #FFFFFF;
 
 // Font Size for Page Titles
 .fs-0 {
-  font-size: calc(2.0625rem + 2.25vw);
+  font-size: calc(1.71875rem + 1.875vw);
 }
 
 @media screen and (min-width: 1200px) {
   .fs-0 {
-    font-size: 3.75rem !important;
+    font-size: 3.125rem !important;
   }
 }
